Fixes navbar z-index issue by upping the z-index value to 1000 from 7.

--- a/src/sass/base/_mediaquery0768.scss
+++ b/src/sass/base/_mediaquery0768.scss
@@ -122,7 +122,7 @@
     right: 0;
     top: 0;
     width: 100%;
-    z-index: 7;
+    z-index: 1000;
   }
   .admin-bar .site-navigation-fixed.navigation-top {
     top: 32px;
